[package]
name = "valterm-chess-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ggez = "0.9.3"
rmp-serde = "1.3.0"
serde = "1.0.210"
serde_derive = "1.0.210"
chess_lib = {git = "https://github.com/INDA24PlusPlus/avj-chess.git"}
chess-networking = {git = "https://github.com/INDA24PlusPlus/chess-networking.git"}